--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,6 @@
-
 aws.s3 {
-  accessKey = "AKIAIRP7RE7D66BGBSFQ"
-  secretAccessKey = "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"
-  bucketName = "bionicspirit.com"
+  accessKey = "xxxxx"
+  secretAccessKey = "xxxxxxxxxxxxxx"
+  bucketName = "someBucket"
   region = "eu-west-1"
 }
